[project]
name = "evals"
version = "1.0.3.post1"
requires-python = ">=3.9"
dependencies = [
    "mypy",
    "openai >= 0.27.2",
    "tiktoken",
    "blobfile",
    "backoff",
    "numpy",
    "snowflake-connector-python[pandas]",
    "pandas",
    "datasets",
    "fire",
    "pydantic",
    "tqdm",
    "nltk",
    "filelock",
    "mock",
    "langdetect",
    'termcolor',
    "lz4",
    "pyzstd",
    "pyyaml",
    "sacrebleu",
    "matplotlib",
    "pytest",
    "setuptools_scm",
    "langchain",
    "types-PyYAML",
]

[project.optional-dependencies]
formatters = [
    "black",
    "isort",
    "autoflake"
]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.setuptools]
packages = ["evals"]
