[project]
name = "evals"
version = "3.0.1.post1"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "aiolimiter",
    "anthropic",
    "backoff",
    "beartype>=0.12.0",
    "blobfile",
    "chess",
    "dacite",
    "datasets",
    "docker",
    "evaluate",
    "filelock",
    "fire",
    "flask",
    "google-generativeai",
    "gymnasium",
    "jiwer",
    "langchain",
    "langdetect",
    "lz4",
    "matplotlib",
    "mock",
    "mypy",
    "networkx",
    "nltk",
    "numexpr",
    "numpy",
    "openai>=1.0.0",
    "pandas",
    "playwright",
    "pydantic",
    "pytest",
    "pyyaml",
    "sacrebleu",
    "seaborn",
    "snowflake-connector-python[pandas]",
    "spacy-universal-sentence-encoder",
    "statsmodels",
    "termcolor",
    "tiktoken",
    "tqdm",
    "types-PyYAML",
    "types-tqdm",
    "zstandard",
]

[project.urls]
repository = "https://github.com/openai/evals"

[project.optional-dependencies]
formatters = ["black", "isort", "autoflake", "ruff"]

torch = ["torch"]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.setuptools]
packages = ["evals"]

[tool.ruff]
# Allow lines to be as long as 767 characters, this is currently the longest line
# TODO: This should be brought down in the future
line-length = 767
